logs/collective.castle.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/CAS4PAS'...
Compiling './lib/python3.5/site-packages/Products/CAS4PAS/CASAuthHelper.py'...
***   File "./lib/python3.5/site-packages/Products/CAS4PAS/CASAuthHelper.py", line 193
    except HTMLParseError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/CAS4PAS/CASXMLResponseParser.py'...
***   File "./lib/python3.5/site-packages/Products/CAS4PAS/CASXMLResponseParser.py", line 71
    print "Test getUser    => OK"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/CAS4PAS/zmi'...
Listing './lib/python3.5/site-packages/Products.CAS4PAS-2.1.2.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/castle'...
Listing './lib/python3.5/site-packages/collective/castle/profiles'...
Listing './lib/python3.5/site-packages/collective/castle/profiles/default'...
Listing './lib/python3.5/site-packages/collective.castle-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rwproperty-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
